--- a/devis/index.html
+++ b/devis/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/eem5dwh.css">
     <link rel="stylesheet" type="text/css" href="./styles/styles_formulaire.css">
     <link rel="stylesheet" type="text/css" href="./styles/styles_formulaire_adaptative.css">
-    <link rel="icon" type="image/png" href="./imgs/logo_small x2 c.png">
+    <link rel="icon" type="image/png" href="../imgs/logo_small x2 c.png">
 </head>
 
 <body>
