--- a/mentions_legales/index.html
+++ b/mentions_legales/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" type="text/css" href="../css/style_btn.css">
     <link rel="stylesheet" type="text/css" href="../css/style_adaptative.css">
     <link rel="stylesheet" href="https://use.typekit.net/eem5dwh.css">
-    <link rel="icon" type="image/png" href="./imgs/logo_small x2 c.png">
+    <link rel="icon" type="image/png" href="../imgs/logo_small x2 c.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf_viewer.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/htm_style_default.css">
+
 </head>
 <body>
     <header>
