--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="canonical" href="https://diags76.fr/"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../imgs/logo_small x2 c.png">
     <title>Uploader un fichier</title>
     <link rel="stylesheet" href="css/admin.css">
     <style>
