--- a/service/index.html
+++ b/service/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style_btn.css">
     <link rel="stylesheet" type="text/css" href="../css/style_adaptative.css">
     <link rel="stylesheet" href="https://use.typekit.net/eem5dwh.css">
-    <link rel="icon" type="image/png" href="./imgs/logo_small x2 c.png">
+    <link rel="icon" type="image/png" href="../imgs/logo_small x2 c.png">
     <link rel="stylesheet" type="text/css" href="css/services_page.css">
     <link rel="stylesheet" type="text/css" href="../css/htm_style_default_service.css">
     <!-- Inclure les styles CSS -->
