--- a/admin/index.html
+++ b/admin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <link rel="canonical" href="https://diags76.fr/"> 
@@ -8,7 +8,7 @@
     <title>Uploader un fichier</title>
     <link rel="stylesheet" href="css/admin.css">
     <style>
-        #modif_page {
+        #modif_page, #get_price {
             background-color: #4CAF50;
             border: none;
             color: white;
@@ -28,6 +28,12 @@
             flex-direction: column;
             
         }
+        .btn_admin{
+            display: flex;
+            justify-content: center;
+            flex-direction: row;
+
+        }
     </style>
 </head>
 <body>  
@@ -36,7 +42,10 @@
     </div>
     <div class="instructions">
         <h3>Instructions: importez le fichier html pius le dossier qui lui est associé.</h3>
-        <button id="modif_page" onclick="window.location.href = '../admin_modify'">page de modification</button>
+        <div class="btn_admin">
+            <button id="modif_page" onclick="window.location.href = '../admin_modify'">page de modification</button>
+            <button id="get_price" onclick="window.location.href = 'price.html'">page des prix</button>
+        </div>
     </div>
     <!-- <div id="service" class="service">
         <h2>Services</h2>
