--- a/service/index.html
+++ b/service/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/eem5dwh.css">
     <link rel="icon" type="image/png" href="../imgs/logo_small x2 c.png">
     <link rel="stylesheet" type="text/css" href="css/services_page.css">
+    <link rel="stylesheet" type="text/css" href="css/services_page_adaptative.css">
     <link rel="stylesheet" type="text/css" href="../css/htm_style_default_service.css">
     <!-- Inclure les styles CSS -->
 
